--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,31 +1,51 @@
-/* src/styles/footer.css */
+/* src/styles/Footer.css */
 
 .footer {
-    background-color: #34495e;
-    color: #ecf0f1;
-    padding: 20px;
-    text-align: center;
-    font-size: 14px;
-  }
-  
+  width: 100%;
+  background-color: #4f6b88;
+  color: #ecf0f1;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Removed color here to rely on the .footer color */
+}
+
+.footer p {
+  color: #ecf0f1; /* Ensure footer text is white */
+}
+
+.social-links {
+  margin-top: 10px;
+}
+
+.social-link {
+  color: #ecf0f1;
+  text-decoration: none;
+  margin: 0 15px;
+  transition: color 0.3s ease;
+}
+
+.social-link:hover {
+  color: #3498db;
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
   .footer-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
   }
-  
+
   .social-links {
-    margin-top: 10px;
+    margin-top: 8px;
   }
-  
+
   .social-link {
-    color: #ecf0f1;
-    text-decoration: none;
     margin: 0 10px;
-    transition: color 0.3s ease;
   }
-  
-  .social-link:hover {
-    color: #3498db;
-  }
-  
+}
