--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -1,63 +1,97 @@
-/* src/components/LandingPage.css */
+/* src/styles/LandingPage.css */
 
 .landing-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: linear-gradient(120deg, #3498db, #2ecc71);
-    color: white;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: lightgrey;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: linear-gradient(120deg, #3498db, #2ecc71);
+  color: white; /* Ensures all text is white by default */
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.landing-header {
+  max-width: 800px;
+  margin-bottom: 40px;
+}
+
+.landing-header h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  line-height: 1.2;
+}
+
+.landing-header p {
+  font-size: 1.25rem;
+  margin-top: 0;
+}
+
+.landing-body {
+  max-width: 900px;
+  margin-top: 40px;
+  font-size: 1.1rem;
+}
+
+.landing-body h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+.landing-body p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
+.landing-body ul {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.1rem;
+  text-align: left;
+}
+
+.landing-body ul li {
+  margin: 10px 0;
+}
+
+.start-btn {
+  background-color: #f39c12;
+  padding: 15px 30px;
+  font-size: 1.25rem;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.start-btn:hover {
+  background-color: #e67e22;
+  transform: scale(1.05);
+}
+
+.landing-footer {
+  margin-top: 40px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
   .landing-header h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 10px;
+    font-size: 2.5rem;
   }
-  
-  .landing-header p {
-    font-size: 1.25rem;
-    margin-top: 0;
-  }
-  
-  .landing-body {
-    margin-top: 40px;
-    font-size: 1.1rem;
-  }
-  
   .landing-body h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    font-weight: 600;
+    font-size: 1.8rem;
   }
-  
-  .landing-body ul {
-    list-style-type: none;
-    padding: 0;
-    font-size: 1.1rem;
+  .landing-body p, .landing-body ul {
+    font-size: 1rem;
   }
-  
-  .landing-body ul li {
-    margin: 10px 0;
-  }
-  
   .start-btn {
-    background-color: #f39c12;
-    padding: 15px 30px;
-    font-size: 1.25rem;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-size: 1.1rem;
+    padding: 12px 24px;
   }
-  
-  .start-btn:hover {
-    background-color: #e67e22;
-  }
-  
+}
