--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -1,8 +1,7 @@
 /* Center the register container */
 .register-container {
-  margin: 100px auto;
-  margin-top: 150px;
-  margin-bottom: 50px;
+  margin: 70px auto;
+  margin-bottom: 25px;
   padding: 20px;
   padding-left: 60px;
   padding-right: 60px;
@@ -117,4 +116,29 @@ p.success {
     font-size: 14px;
     padding: 10px;
   }
+}
+
+/* Password Container */
+.password-container {
+  position: relative;
+  width: 100%;
+}
+
+.password-container input {
+  width: 100%;
+  padding-right: 50px; /* Give space for the toggle inside the field */
+}
+
+.password-toggle-text {
+  position: absolute;
+  top: 35%;
+  right: 10px;
+  transform: translateY(-50%);
+  font-size: 1rem;
+  color: #007bff;
+  cursor: pointer;
+}
+
+.password-toggle-text:hover {
+  text-decoration: underline;
 }
